# vmbox

./: Cargo.toml  Makefile
arch/: Cargo.toml
arch/src/: acpi.rs  layout.rs  lib.rs
base/: Cargo.toml
base/event_token_derive/: Cargo.toml
base/src/: descriptor.rs  errno.rs  event.rs  handle_eintr.rs  lib.rs  mmap.rs  notifiers.rs  wait_context.rs
devices/: Cargo.toml
devices/src/: bus.rs  irq_event.rs  lib.rs  serial.rs  serial_device.rs
devices/src/irqchip/: kvm.rs  mod.rs
hypervisor/: Cargo.toml
hypervisor/src/: kvm.rs  lib.rs
resources/: Cargo.toml
resources/src/: address_range.rs  lib.rs
src/: acpi.rs  main.rs  mmap.rs  vcpu.rs
sync/: Cargo.toml
