[package]
name = "arch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm-memory = { version = "0.14", features = ["backend-mmap"]}
linux-loader = "0.11.0" 
resources = { path = "../resources" }
anyhow = "1.0" 