
[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0" 
libc = "0.2.155"  
smallvec = "1.13" 
event_token_derive = { path = "event_token_derive", version = "*" }
nix = "0.29" 