[package]
name = "hypervisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sync = { path = "../sync" }
base = { path = "../base" }
vm-memory = { version = "0.14", features = ["backend-mmap"]}
kvm-bindings = { version = "0.8", features = ["fam-wrappers"]}
kvm-ioctls = "0.17"
vmm-sys-util = "0.12.1" 
log = "0.4.21"   
libc = "0.2.155" 
arch = { path = "../arch" }